--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -1,9 +1,10 @@
 
-            {% block content %}
-                <h2>Home page</h2>
-                <p><a href={{ url_for('user.register') }}>Register</a></p>
-                <p><a href={{ url_for('user.login') }}>Sign in</a></p>
-                <p><a href={{ url_for('home_page') }}>Home page</a> (accessible to anyone)</p>
-                <p><a href={{ url_for('member_page') }}>Member page</a> (login required)</p>
-                <p><a href={{ url_for('user.logout') }}>Sign out</a></p>
+{% block content %}
+    <h2>Home page</h2>
+    <h1>Hi, {{ current_user.username }}!</h1>
+    <p><a href={{ url_for('auth.register') }}>Register</a></p>
+    <p><a href={{ url_for('auth.login') }}>Sign in</a></p>
+    <p><a href={{ url_for('main.index') }}>Home page</a> (accessible to anyone)</p>
+    <p><a href={{ url_for('profile.view') }}>Profile View</a> (login required)</p>
+    <p><a href={{ url_for('profile.edit') }}>Profile Edit</a> (login required)</p>
 {% endblock %}
