--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -10,7 +10,7 @@
     <body>
         <div>
             WedWeb:
-            <a href="{{ url_for('main.index') }}">Home</a>
+            <a href="{{ url_for('views.index') }}">Home</a>
             {% if current_user.is_anonymous %}
             <a href="{{ url_for('auth.login') }}">Login</a>
             {% else %}
