--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -4,7 +4,7 @@
     <h1>Hi, {{ current_user.username }}!</h1>
     <p><a href={{ url_for('auth.register') }}>Register</a></p>
     <p><a href={{ url_for('auth.login') }}>Sign in</a></p>
-    <p><a href={{ url_for('main.index') }}>Home page</a> (accessible to anyone)</p>
-    <p><a href={{ url_for('profile.view') }}>Profile View</a> (login required)</p>
-    <p><a href={{ url_for('profile.edit') }}>Profile Edit</a> (login required)</p>
+    <p><a href={{ url_for('views.index') }}>Home page</a> (accessible to anyone)</p>
+    <p><a href={{ url_for('views.view_profile') }}>Profile View</a> (login required)</p>
+    <p><a href={{ url_for('views.edit_profile') }}>Profile Edit</a> (login required)</p>
 {% endblock %}
