--- a/WeddingWebsite/templates/index.html
+++ b/WeddingWebsite/templates/index.html
@@ -1,6 +1,6 @@
 
 {% block content %}
-    <h2>Home page</h2>
+    <h2>Home Page</h2>
     <h1>Hi {{ current_user.username }}!</h1>
     <p><a href={{ url_for('auth.register') }}>Register</a></p>
     <p><a href={{ url_for('auth.login') }}>Sign in</a></p>
