added home page and its html/css

--- a/WeddingWebsite/templates/base.html
+++ b/WeddingWebsite/templates/base.html
@@ -1,11 +1,8 @@
 
 <html>
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
     <head>
-        {% if title %}
-        <title>{{ title }} - WedWeb</title>
-        {% else %}
-        <title>Welcome to WedWeb</title>
-        {% endif %}
+        <title>H & K Wedding</title>
     </head>
     <body>
         <div>
