added links/views for home page navigation

--- a/WeddingWebsite/templates/home.html
+++ b/WeddingWebsite/templates/home.html
@@ -22,15 +22,15 @@
   <div class="left">
 
     <div class="block">
-        <p>RSVP Here</p>
+        <p><a href="{{ url_for('views.rsvp') }}">RSVP Here</a></p>
     </div>
 
     <div class="block">
-        <p>Dress Code</p>
+        <p><a href="{{ url_for('views.dress_code') }}">Dress Code</a></p>
     </div>
 
     <div class="block">
-        <p>Registry</p>
+        <p><a href="{{ url_for('views.registry') }}">Registry</a></p>
     </div>
 
     <div class="block">
@@ -42,11 +42,11 @@
   <div class="right">
 
     <div class="block">
-        <p>Location</p>
+        <p><a href="{{ url_for('views.location') }}">Location</a></p>
     </div>
 
     <div class="block">
-        <p>Photos</p>
+        <p><a href="{{ url_for('views.photos') }}">Photos</a></p>
     </div>
 
 
