added background for '/home'

--- a/WeddingWebsite/templates/home.html
+++ b/WeddingWebsite/templates/home.html
@@ -5,6 +5,7 @@
 <!-- Home.html -->
 <head>
     <link href="static/base.css" rel="stylesheet" type="text/css">
+    <link href="static/home.css" rel="stylesheet" type="text/css">
 </head>
 
 <!-- Header -->
@@ -18,6 +19,7 @@
 </div>
 
 <!-- The flexible grid (content) -->
+<div class = background>
 <div class="row">
 
   <div class="left">
@@ -53,6 +55,7 @@
 
 
   </div> <!-- end right side -->
+</div>
 </div>
 
 {% endblock %}
