--- a/WeddingWebsite/static/base.css
+++ b/WeddingWebsite/static/base.css
@@ -12,56 +12,35 @@ body {
 .header {
   padding: 60px;
   text-align: center;
-  background: #1abc9c;
-  color: white;
+  background: #4B5B33;
+  color: #7CC0AC;
 }
 
 /* Style the top navigation bar */
 .info-blab {
   display: flex;
-  background-color: #333;
-}
+  background-color: #1A223C;
+  color: #7CC0AC;
 
-/* Style the navigation bar links */
-.info-blab a {
-  color: white;
-  padding: 14px 20px;
-  text-decoration: none;
-  text-align: center;
-}
-
-/* Change color on hover */
-.info-blab a:hover {
-  background-color: #ddd;
-  color: black;
 }
 
 /* Column container */
 .row {  
   display: flex;
   flex-wrap: wrap;
+  padding: 20px;
+  color: #393D3F;
 }
 
 /* Create two unequal columns that sits next to each other */
 /* Sidebar/left column */
 .left {
   flex: 50%;
-  background-color: #f1f1f1;
-  padding: 20px;
 }
 
 /* Main column */
 .right {
   flex: 50%;
-  background-color: white;
-  padding: 20px;
-}
-
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
 }
 
 /* Footer */
@@ -74,6 +53,6 @@ body {
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
   .row, .info-blab {   
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 }
