--- a/WeddingWebsite/templates/home.html
+++ b/WeddingWebsite/templates/home.html
@@ -15,7 +15,7 @@
 
 <!-- Navigation Bar -->
 <div class="info-blab">
-  <p>A Quick Blab w/ essesntal info</p>
+  <p>When: May 21st. Where: Keystone, CO.</p>
 </div>
 
 <!-- The flexible grid (content) -->
