--- a/WeddingWebsite/static/base.css
+++ b/WeddingWebsite/static/base.css
@@ -8,16 +8,10 @@ body {
   margin: 0;
 }
 
-/* Header/logo Title */
-.header {
-  padding: 60px;
-  text-align: center;
-  background: #4B5B33;
-  color: #7CC0AC;
-}
 
 /* Style the top navigation bar */
 .info-blab {
+  padding-left: 20px;
   display: flex;
   background-color: #1A223C;
   color: #7CC0AC;
