--- a/WeddingWebsite/templates/home.html
+++ b/WeddingWebsite/templates/home.html
@@ -10,7 +10,9 @@
 
 <!-- Header -->
 <div class="header">
-  <h1>Hannah and Kelton's Wedding</h1>
+    <div class="block">
+        <h1>Hannah & Kelton's<br>Wedding</h1>
+    </div>
 </div>
 
 <!-- Navigation Bar -->
