--- a/WeddingWebsite/templates/index.html
+++ b/WeddingWebsite/templates/index.html
@@ -1,13 +1,32 @@
+<!-- index.html -->
+
 {% extends "base.html" %}
 
 
 {% block content %}
-    <h2>Home Page</h2>
-    <h1>Hi {{ current_user.username }}!</h1>
-    <p><a href={{ url_for('auth.register') }}>Register</a></p>
-    <p><a href={{ url_for('auth.login') }}>Sign in</a></p>
-    <p><a href={{ url_for('auth.logout') }}> Logout</a></p>
-    <p><a href={{ url_for('views.index') }}>Home page</a> (accessible to anyone)</p>
-    <p><a href={{ url_for('views.view_profile') }}>Profile View</a> (login required)</p>
-    <p><a href={{ url_for('views.edit_profile') }}>Profile Edit</a> (login required)</p>
+<head>
+    <link href="static/base.css" rel="stylesheet" type="text/css">
+    <link href="static/index.css" rel="stylesheet" type="text/css">
+</head>
+
+<div class="background">
+
+
+    <div class="main">
+        <div class = block>
+            <h1><a href={{ url_for('auth.login') }}>Sign in</a></h1>
+        </div>
+
+
+        <div class="block">
+            <h4><a href={{ url_for('auth.register') }}>Register</a></h4>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
 {% endblock %}
