--- a/WeddingWebsite/templates/index.html
+++ b/WeddingWebsite/templates/index.html
@@ -1,13 +1,34 @@
 <!-- index.html -->
 
-{% extends "base.html" %}
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <head>
+        <title>H & K Wedding</title>
+            <link href="static/base.css" rel="stylesheet" type="text/css">
+            <link href="static/index.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+    <div class="nav_bar">
+        <div>
+            WedWeb:
+            <a href="{{ url_for('views.index') }}">Home</a>
+            {% if current_user.is_anonymous %}
+            <a href="{{ url_for('auth.login') }}">Login</a>
+            {% else %}
+            <a href="{{ url_for('auth.logout') }}">Logout</a>
+            {% endif %}
+        </div>
+        <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
+    </div>
 
-
-{% block content %}
-<head>
-    <link href="static/base.css" rel="stylesheet" type="text/css">
-    <link href="static/index.css" rel="stylesheet" type="text/css">
-</head>
 
 <div class="background">
 
@@ -23,10 +44,3 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-{% endblock %}
