--- a/WeddingWebsite/templates/dress_code/bridesmaid.html
+++ b/WeddingWebsite/templates/dress_code/bridesmaid.html
@@ -1,3 +1,24 @@
 <!-- /dress_code/bridesmaid.html -->
 
-<h1>BRIDESMAID.HTML</h1>
+{% extends "base.html" %}
+
+
+{% block content %}
+<head>
+    <link href="static/base.css" rel="stylesheet" type="text/css">
+    <link href="static/dress_code.css" rel="stylesheet">
+</head>
+
+<div class="background">
+<div class='row'>
+        <div class="col">
+            <div class="block">
+                <h2>Dress Code</h2>
+                    <p>
+                        Bridesmaid's dress Code Info
+                    </p>
+            </div>
+        </div>
+    </div>
+    </div>
+{% endblock %}
