--- a/WeddingWebsite/templates/RSVP.html
+++ b/WeddingWebsite/templates/RSVP.html
@@ -1,16 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
+<head>
+    <link href="static/rsvp.css" rel="stylesheet" type="text/css">
+</head>
 
+<div class="background">
 <h1>RSVP</h1>
 <form action="" method="post">
-    <p>
         {{ form.csrf_token }}
 
         <h3>Will you be attending?</h3>
         {{ form.status }}
 
-        <p>Current Status: {{ guest.RSVP_status }}</p>
+        <p><emsp>Current Status: {{ guest.RSVP_status }}</p>
 
         <h3>Will you be bringing a plus one?</h3>
         {{ form.plus_one_status }}
@@ -25,8 +28,8 @@
 
 
         {{ form.submit() }}
-    </p>
 
 </form>
+    </div>
 
 {% endblock %}
