--- a/WeddingWebsite/templates/dress_code/default.html
+++ b/WeddingWebsite/templates/dress_code/default.html
@@ -1,4 +1,23 @@
 <!-- /dress_code/default.html -->
+{% extends "base.html" %}
 
 
-<h1>DEFAULT.HTML</h1>
+{% block content %}
+<head>
+    <link href="static/base.css" rel="stylesheet" type="text/css">
+    <link href="static/dress_code.css" rel="stylesheet">
+</head>
+
+<div class="background">
+<div class='row'>
+        <div class="col">
+            <div class="block">
+                <h2>Dress Code</h2>
+                    <p>
+                        Default dress Code Info
+                    </p>
+            </div>
+        </div>
+    </div>
+    </div>
+{% endblock %}
