--- a/WeddingWebsite/templates/dress_code/wedding_party.html
+++ b/WeddingWebsite/templates/dress_code/wedding_party.html
@@ -1,4 +1,25 @@
 <!-- /dress_code/wedding_party.html -->
 
 
-<h1>WEDDING_PARTY.HTML</h1>
+{% extends "base.html" %}
+
+
+{% block content %}
+<head>
+    <link href="static/base.css" rel="stylesheet" type="text/css">
+    <link href="static/dress_code.css" rel="stylesheet">
+</head>
+
+<div class="background">
+<div class='row'>
+        <div class="col">
+            <div class="block">
+                <h2>Dress Code</h2>
+                    <p>
+                        Wedding Party dress Code Info
+                    </p>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
