--- a/WeddingWebsite/templates/login.html
+++ b/WeddingWebsite/templates/login.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+<head>
+    <link href="static/rsvp.css" rel="stylesheet" type="text/css">
+</head>
+
+
+<div class="background">
 <h1>Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
@@ -22,4 +29,6 @@
         <p>{{ form.submit() }}</p>
     </form>
     <p>New User? <a href="{{ url_for('auth.register') }}">Click to Register!</a></p>
+
+</div>
 {% endblock %}
