refactored blueprints into their own folders

--- a/WeddingWebsite/auth/templates/login.html
+++ b/WeddingWebsite/auth/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <head>
-    <link href="static/rsvp.css" rel="stylesheet" type="text/css">
+    <link href="static/forms.css" rel="stylesheet" type="text/css">
 </head>
 
 
