--- a/WeddingWebsite/templates/base.html
+++ b/WeddingWebsite/templates/base.html
@@ -3,7 +3,7 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <head>
         <title>H & K Wedding</title>
-        <link href="static/base.css" rel="stylesheet" type="text/css">
+        <link href="../static/base.css" rel="stylesheet" type="text/css">
     </head>
     <body>
     <div class="nav_bar">
