--- a/WeddingWebsite/templates/RSVP.html
+++ b/WeddingWebsite/templates/RSVP.html
@@ -12,17 +12,26 @@
 
         <h3>Will you be attending?</h3>
         {{ form.status }}
+        {% for error in form.status.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
 
         <p><emsp>Current Status: {{ guest.RSVP_status }}</p>
 
         <h3>Will you be bringing a plus one?</h3>
         {{ form.plus_one_status }}
+        {% for error in form.plus_one_status.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
 
         <p>Current Status: {{ guest.plus_one }}</p>
 
         <h3>Any Dietary Restrictions</h3>
         <h6>(for you and your guest)</h6>
         {{ form.diet }}
+        {% for error in form.diet.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
 
         <p>Current Status: {{ guest.dietary_restrictions }}</p>
 
