--- a/WeddingWebsite/templates/dress_code/default.html
+++ b/WeddingWebsite/templates/dress_code/default.html
@@ -14,7 +14,7 @@
             <div class="block">
                 <h2>Dress Code</h2>
                     <p>
-                        Default dress Code Info
+                        Default Dress Code
                     </p>
             </div>
         </div>
