added venmo tag

--- a/WeddingWebsite/templates/registry.html
+++ b/WeddingWebsite/templates/registry.html
@@ -7,7 +7,10 @@
 <head>
     <link href="static/base.css" rel="stylesheet" type="text/css">
     <link href="static/location.css" rel="stylesheet" type="text/css">
-    <style> .background {background-image: url("static/images/flower_pic.png"); height: 2800px;} </style>
+    <style>
+        .background {background-image: url("static/images/flower_pic.png"); height: 2800px;}
+        img {height: 200px;}
+    </style>
 </head>
 
 
@@ -18,8 +21,9 @@
                 <h2>Registry</h2>
                     <p>
                         Due to us having to move, and being unsure as to where to we don't have a traditional registry.
-                        Instead, we are asking for cash or gift cards. There is a my venmo tag is <em>kgb33</em> if you prefer digital transfers.
+                        Instead, we are asking for cash or gift cards. There is a my venmo tag is <a href="https://venmo.com/code?user_id=2191636968767488671">kgb33</a> if you prefer digital transfers.
                     </p>
+                <img alt="Venmo QR Code" src="static/images/venmo_tag.png">
             </div>
         </div>
     </div>
