added tests for the Location and Photos views

--- a/WeddingWebsite/templates/location_cabin.html
+++ b/WeddingWebsite/templates/location_cabin.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<!-- location_hotel.html -->
+<!-- location_cabin.html -->
 <head>
     <link href="static/base.css" rel="stylesheet" type="text/css">
     <link href="static/location.css" rel="stylesheet" type="text/css">
