added bridesmaids' dress code info

--- a/WeddingWebsite/templates/dress_code/bridesmaid.html
+++ b/WeddingWebsite/templates/dress_code/bridesmaid.html
@@ -7,16 +7,36 @@
 <head>
     <link href="static/base.css" rel="stylesheet" type="text/css">
     <link href="static/dress_code.css" rel="stylesheet">
+    <style>p{
+        padding-left: 10%;
+        padding-right: 10%;
+    }</style>
 </head>
 
 <div class="background">
 <div class='row'>
         <div class="col">
             <div class="block">
-                <h2>Dress Code</h2>
-                    <p>
-                        Bridesmaid's dress Code Info
+                <h2>Dress Code -- Bridesmaids</h2>
+                    <p> I don’t care if you spend $5 or $500 dollars on your dress,
+                        find something comfortable that you’ll be able to wear again!
+                        Please keep in mind that we will be at a high altitude so it will
+                        likely be in the 50s outside. Consider a heavy fabric, longer sleeves or
+                        get a cardigan/shawl/wrap to go along with your dress.
+                        Shoes: pick something comfortable that you can walk outside/on the grass with.
+                        I don’t care what color, just don’t be dumb and wear like bright orange tennis shoes.
+                        Jewelry/Hair/Other: Do what you want, keep it classy.
+                        Please let me know if you have any questions! If you find a dress you like but aren’t
+                        sure about it I’m happy to look at it, but I don’t need to approve everyone’s dresses,
+                        I trust you guys.
+
+                        <br>
+                        Below are some examples of what I have in mind.
                     </p>
+                <img alt="Some Possible Shades" src="static/images/dress_code/shades_1.png">
+                <img alt="Some More Possible Shades" src="static/images/dress_code/shades_2.png">
+                <br>
+                <img alt="Possible Styles" src="static/images/dress_code/styles_1.png">
             </div>
         </div>
     </div>
