added default dress code info

--- a/WeddingWebsite/templates/dress_code/default.html
+++ b/WeddingWebsite/templates/dress_code/default.html
@@ -13,9 +13,19 @@
         <div class="col">
             <div class="block">
                 <h2>Dress Code</h2>
-                    <p>
-                        Default Dress Code
-                    </p>
+                    <h3>Semi-formal</h3>
+                        <p>
+                            Slacks and a blouse/button-up
+                            Dresses or skirts
+                            No need for ball-gowns and tuxes
+                        </p>
+                        <p>
+
+                        Please keep in mind that we will be at about 10,000 feet in Colorado in May.
+                        It will likely be in the 50s outside so please dress accordingly. The ceremony
+                        will be held outside but the reception will be held inside. Layers are recommended.
+
+                        </p>
             </div>
         </div>
     </div>
