wedding_party now has the same dress code as default

--- a/WeddingWebsite/templates/dress_code/default.html
+++ b/WeddingWebsite/templates/dress_code/default.html
@@ -6,6 +6,10 @@
 <head>
     <link href="static/base.css" rel="stylesheet" type="text/css">
     <link href="static/dress_code.css" rel="stylesheet">
+    <style>p{
+        padding-left: 10%;
+        padding-right: 10%;
+    }</style>
 </head>
 
 <div class="background">
