added groomsmen dress code info

--- a/WeddingWebsite/templates/dress_code/groomsmen.html
+++ b/WeddingWebsite/templates/dress_code/groomsmen.html
@@ -8,15 +8,24 @@
 <head>
     <link href="static/base.css" rel="stylesheet" type="text/css">
     <link href="static/dress_code.css" rel="stylesheet">
+    <style>li {list-style-type: none;}</style>
 </head>
 
 <div class="background">
 <div class='row'>
         <div class="col">
             <div class="block">
-                <h2>Dress Code</h2>
+                <h2>Dress Code -- Groomsmen</h2>
                     <p>
-                        Groomsman dress Code Info
+                        <ul>
+                            <li>Black Suit</li>
+                            <li>Black Dress Shoes</li>
+                            <li>Math Bow-tie (will be provided)</li>
+                            <li>Dress Shirt in one of the following colors</li>
+                            <li><img alt="Dress Shirt Shades" src="static/images/dress_code/gm_shades.png"></li>
+                        </ul>
+
+                    If you have any questions please direct them to Hannah. Kelton will be happy to pass along any questions to Hannah but he does not know the answers.
                     </p>
             </div>
         </div>
