added edit profile link

--- a/WeddingWebsite/templates/guest.html
+++ b/WeddingWebsite/templates/guest.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <title> {{ guest.username }} </title>
@@ -33,5 +34,8 @@
         </li>
     </ul>
 
+    <a href="{{ url_for('views.edit_profile') }}">Edit</a>
+
 </body>
 </html>
+{% endblock %}
