--- a/WeddingWebsite/templates/base.html
+++ b/WeddingWebsite/templates/base.html
@@ -13,6 +13,7 @@
             <a href="{{ url_for('auth.login') }}">Login</a>
             {% else %}
             <a href="{{ url_for('auth.logout') }}">Logout</a>
+            <a href="{{ url_for('views.view_profile') }}">Profile</a>
             {% endif %}
         </div>
         <hr>
