Fixed some Typos

--- a/WeddingWebsite/templates/base.html
+++ b/WeddingWebsite/templates/base.html
@@ -36,7 +36,7 @@
 
     <!-- Navigation Bar -->
     <div class="info-blab">
-      <p>When: May 24st. Where: Keystone, CO.</p>
+      <p>When: May 24th. Where: Keystone, CO.</p>
     </div>
 
 
