--- a/WeddingWebsite/templates/dress_code/groomsmen.html
+++ b/WeddingWebsite/templates/dress_code/groomsmen.html
@@ -25,7 +25,7 @@
                             <li><img alt="Dress Shirt Shades" src="static/images/dress_code/gm_shades.png"></li>
                         </ul>
 
-                    If you have any questions please direct them to Hannah. Kelton will be happy to pass along any questions to Hannah but he does not know the answers.
+                    If you have any questions please direct them to Hannah. Kelton will be happy to pass along any questions, but he knows nothing.
                     </p>
             </div>
         </div>
