--- a/WeddingWebsite/templates/location_hotel.html
+++ b/WeddingWebsite/templates/location_hotel.html
@@ -15,9 +15,9 @@
             <div class="block">
                 <h2>There are several hotels in the area.</h2>
                     <p>
-                        Luckily for us late May is the off season, so there will be plenty of rooms available in town.
-                        The venue is located in Keystone, CO. however the nearby towns of Silverthorne, Dillon and, Frisco are all less than
-                        a 10 minute drive away.
+                        Luckily for us late May is the off season, however it is Memorial Day weekend so book soon.
+                        The venue is located in Keystone, CO. The nearby towns of Silverthorne, Dillon and, Frisco are all less than
+                        a 10 minute drive away and offer numerous lodging options.
                     </p>
             </div>
         </div>
