--- a/WeddingWebsite/templates/registry.html
+++ b/WeddingWebsite/templates/registry.html
@@ -20,8 +20,8 @@
             <div class="block">
                 <h2>Registry</h2>
                     <p>
-                        Due to us having to move, and being unsure as to where to we don't have a traditional registry.
-                        Instead, we are asking for cash or gift cards. There is a my venmo tag is <a href="https://venmo.com/code?user_id=2191636968767488671">kgb33</a> if you prefer digital transfers.
+                        Due to us having to move, and being unsure as to where, we don't have a traditional registry.
+                        Instead, we are asking for cash or gift cards. The venmo tag is <a href="https://venmo.com/code?user_id=2191636968767488671">kgb33</a>.
                     </p>
                 <img alt="Venmo QR Code" src="static/images/venmo_tag.png">
             </div>
