fixed date on details page

--- a/WeddingWebsite/templates/details.html
+++ b/WeddingWebsite/templates/details.html
@@ -57,7 +57,7 @@
                 </p>
                 {% else %}
                 <p>
-                    Please arrive at the cabin (21 Porcupine Lane) at 11 am on May 22nd. There will be snacks available
+                    Please arrive at the cabin (21 Porcupine Lane) at 11 am on May 24th. There will be snacks available
                     for everyone until the ceremony begins at noon. The ceremony will be held outside (weather
                     permitting) with unpredictable weather including possible rain or snow. Bring layers and warm
                     clothes. The reception will begin at 12:30 and will be held in the cabin. Lunch, drinks (including
