--- a/WeddingWebsite/templates/home.html
+++ b/WeddingWebsite/templates/home.html
@@ -27,6 +27,10 @@
         <p><a href="{{ url_for('views.registry') }}">Registry</a></p>
       </div>
 
+      <div class="block">
+        <p><a href="{{ url_for('views.lfgs') }}">LFGs</a></p>
+      </div>
+
     </div> <!-- end left col -->
 
     <div class="right">
