--- a/WeddingWebsite/templates/lfgs.html
+++ b/WeddingWebsite/templates/lfgs.html
@@ -57,13 +57,25 @@
             {% for lfg in lfgs if lfg.group_type == "HOTEL" %}
             <div id='lfg'>
                 <h3>{{ lfg.info }}</h3> 
+                <h6>Owner: {{ lfg.owner_name }}</h6>
                 <p>This LFG has {{ lfg.total_members }} out of {{ lfg.max_members }} members</p>
                 {% if lfg.owner_id == current_user.id %}
+                    <h6>YOU are the owner of this LFG, YOU are resposeable for contating the other group members.</h6>
+                    <ul>
+                            {% for id, contact_info in lfg.members.items() %}
+                                <li>{{ contact_info }}</li>
+                            {% endfor %}
+                    </ul>
                     <a href="{{ url_for('views.edit_lfg', lfg_id=lfg._id) }}">Edit LFG</a>
-                {% elif current_user._id in lfg.members %}
+                    <a href="{{ url_for('views.delete_lfg', lfg_id=lfg._id) }}">Delete LFG</a>
+
+                {% elif is_in_lfg(lfg, current_user) %}
                     <a href="{{ url_for('views.leave_lfg', lfg_id=lfg._id) }}">Leave LFG</a>
-                {% else %}
+                {% elif not lfg.full %}
                     <a href="{{ url_for('views.join_lfg', lfg_id=lfg._id) }}">Join LFG</a>
+                
+                        
+                    
                 {% endif %}
             </div>
             {% else %}
