--- a/WeddingWebsite/templates/home.html
+++ b/WeddingWebsite/templates/home.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="block">
-        <p><a href="{{ url_for('views.lfgs') }}">LFGs</a></p>
+        <p><a href="{{ url_for('lfgs.index') }}">LFGs</a></p>
       </div>
 
     </div> <!-- end left col -->
