--- a/WeddingWebsite/templates/guest.html
+++ b/WeddingWebsite/templates/guest.html
@@ -34,7 +34,7 @@
         </li>
     </ul>
 
-    <a href="{{ url_for('views.edit_profile') }}">Edit</a>
+    <a href="{{ url_for('auth.edit_profile') }}">Edit</a>
 
 </body>
 </html>
