fixed edit profile errors, and added tests

--- a/WeddingWebsite/auth/templates/guest.html
+++ b/WeddingWebsite/auth/templates/guest.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<!-- guest.html -->
 <head>
     <meta charset="UTF-8">
     <title> {{ guest.username }} </title>
