--- a/WeddingWebsite/static/location.css
+++ b/WeddingWebsite/static/location.css
@@ -9,7 +9,7 @@
     position: relative;
     overflow: hidden;
     padding-top: 56.25%;
-    margin: 0 30px 30px 30px;
+    margin: 0 30px 30px;
 }
 
 .iframe-resp {
