--- a/weddingwebsite/templates/base.html
+++ b/weddingwebsite/templates/base.html
@@ -35,11 +35,10 @@
         </div>
     </div>
 
-    <!-- Navigation Bar -->
-    <div class="info-blab">
-        <p>When: May 24th, 11am. Where: Keystone, CO.</p>
+    <div class="COVID-INFO">
+        <p>Postponed Indefinitely due to COVID-19.</p>
     </div>
-
+    
 
     {% block content %}
     {% endblock %}
