--- a/weddingwebsite/templates/home.html
+++ b/weddingwebsite/templates/home.html
@@ -9,8 +9,10 @@
   <link href="static/home.css" rel="stylesheet" type="text/css">
 </head>
 
-<!-- The flexible grid (content) -->
+
+
 <div class=background>
+  <!--
   <div class="row">
 
     <div class="left">
@@ -31,14 +33,12 @@
         <p><a href="{{ url_for('lfgs.index') }}">LFGs</a></p>
       </div>
 
-    </div> <!-- end left col -->
+    </div>
 
     <div class="right">
-
       <div class="block">
         <p><a href="{{ url_for('views.details') }}">Details</a></p>
       </div>
-
 
       <div class="block">
         <p><a href="{{ url_for('views.location') }}">Location</a></p>
@@ -50,8 +50,10 @@
 
 
 
-    </div> <!-- end right side -->
+    </div>
   </div>
+  -->
 </div>
+
 
 {% endblock %}
